--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,13 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
+    <!--
+      Icons
+    -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <!-------------------------------------------------------------------------------------------->
     <title>Netflix</title>
   </head>
