--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     <!-------------------------------------------------------------------------------------------->
     <title>Netflix</title>
   </head>
-  <body>
+  <body onselectstart="return false">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
